[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "membit-python"
version = "0.1.0"
description = "Python client for the Membit API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests>=2.25.0",
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["membit"]
